<resources>
    <string name="App_Name">Vorratsübersicht</string>
    <string name="App_Yes">Ja</string>
    <string name="App_No">Nein</string>
    <string name="App_Ok">OK</string>
    <string name="App_Cancel">Abbrechen</string>
    <string name="App_Save">Speichern</string>
    <string name="App_Replace">Ersetzen</string>
    <string name="App_Delete">Löschen</string>
    <string name="App_DeleteBig">LÖSCHEN</string>
    <string name="App_DoNotDelete">Nicht löschen</string>
    <string name="App_Insert">Hinzufügen</string>
    <string name="App_Create">Erstellen</string>
    <string name="App_Leter">Später</string>
    <string name="App_NotToday">Nicht heute</string>
    <string name="App_Share">Teile</string>
    <string name="App_Search">Suchen</string>
    <string name="App_Rename">Umbenennen</string>
    <string name="App_NoEntry">[Kein Eintrag]</string>
    <string name="App_NoDate">Kein Datum</string>
    <string name="App_ErrorOccurred">Fehler aufgetreten!</string>
    <string name="App_ChooseAction">Aktion wählen…</string>
    <string name="App_EnterQuantity">Anzahl eingeben:</string>
    <string name="App_CheckPermissions">Bitte prüfen Sie die Berechtigungen für Speicher in der \'App-Info\'.</string>
    <string name="Start_TestDbQuestion">Sie starten die Anwendung zum ersten Mal.\n\nZum Kennenlernen der Anwendung kann eine Testdatenbank aktiviert werden. Die Datenbanken können neben dem Zahnrad ausgewählt werden.</string>
    <string name="Start_PleaseWait">Bitte warten…</string>
    <string name="Main_DemnaechstZuVerbrauchen">Demnächst zu verbrauchen:</string>
    <string name="Main_ArticlesWithExpiryDate">%s Artikel nach dem Ablaufdatum</string>
    <string name="Main_ArticlesNearExpiryDate">%s Artikel demnächst verbrauchen</string>
    <string name="Main_CreateBackupNow">Backup der Datenbank erstellen?</string>
    <string name="Main_Database">Datenbank</string>
    <string name="Main_TestDatabase">ACHTUNG: Test Datenbank ist aktiv!</string>
    <string name="Main_OpenDatabase">Datenbank öffnen:</string>
    <string name="Main_Button_BestandNachKategorie">Bestand nach Kategorie</string>
    <string name="Main_Button_Lagerbestand">Lagerbestand</string>
    <string name="Main_Button_LagerbestandListe">Lagerbestandsliste</string>
    <string name="Main_Button_ArtikelListe">Artikeldaten</string>
    <string name="Main_Button_ArtikelScannen">Artikel scannen</string>
    <string name="Main_Button_Einkaufsliste">Einkaufsliste</string>
    <string name="Main_Button_Artikelangaben">Artikelangaben</string>
    <string name="Main_Button_AufEinkaufsliste">Auf Einkaufsliste</string>
    <string name="Main_Button_InLagerbestand">Von Einkaufsliste ins Lager</string>
    <string name="Main_SharedDirectoryHint">Die Datenbank kann auch in den "Einstellungen" in einen \"Freigegebenen Verzeichnis\" verschoben werden. Damit bleibt sie auch nach der Deinstallation erhalten. Für weitere Informationen und wichtige Hinweise siehe App Wiki.\n\nDiese Nachricht wird noch %d mal angezeigt.</string>
    <string name="EanCodeScan_Title">EAN und QR Code Scan</string>
    <string name="EanCodeScan_OnOff">an/aus</string>
    <string name="EanCodeScan_Change">drehen</string>
    <string name="EanCodeScan_Test">Test</string>
    <string name="Settings_Title">Einstellungen</string>
    <string name="Settings_ArticleDefaults">Artikelangaben</string>
    <string name="Settings_AdditionalCategories">Zusätzliche Kategorien (mit Komma getrennt definieren)</string>
    <string name="Settings_CurrentDatabase">Aktuelle Datenbank</string>
    <string name="Settings_Datenbank">Datei: %s\n\nGröße: %s (%s Bytes)</string>
    <string name="Settings_DefaultCategory">Standard Kategorie für neue Artikel</string>
    <string name="Settings_BackupAndRestore">Backup und Restore</string>
    <string name="Settings_CreateBackup">Backup erstellen</string>
    <string name="Settings_ShareDatabaseFile">Datenbank Datei teilen</string>
    <string name="Settings_RestoreBackup">Backup zurückspielen</string>
    <string name="Settings_RestoreBackupFromFile">Backup aus Datei zurückspielen</string>
    <string name="Settings_Action_BackupRestore">Zurückspielen</string>
    <string name="Settings_Action_BackupDelete">Löschen</string>
    <string name="Settings_DeleteDatabase">Datenbank löschen</string>
    <string name="Settings_SelectBackupOrImport">Datenbank oder Backup auswählen:</string>
    <string name="Settings_SelectBackup">Backup auswählen:</string>
    <string name="Settings_NoDatabaseSelected">Keine Datenbank ausgewählt.</string>
    <string name="Settings_BackupFileCount">Anzahl Backups: %,d, Gesamtgröße: %,d</string>
    <string name="Settings_BackupPath">Backup-Pfad:</string>
    <string name="Settings_LastBackupOn">Letzter Backup am: %s</string>
    <string name="Settings_ChangesSinceLastBackup">Änderungen seit dem letzten Backup: %s</string>
    <string name="Settings_AskForBackup">An Backup alle 7 Tage erinnern</string>
    <string name="Settings_BackupDone">Datenbank im Download Verzeichnis gesichert als:\n\n {0}\n\nSichern Sie diese Datei auf Google Drive oder auf Ihren PC.</string>
    <string name="Settings_DatenbankKomprimieren">Datenbank komprimieren</string>
    <string name="Settings_DatenbankReparieren">Datenbank reparieren/checken</string>
    <string name="Settings_CurrentDatabaseOperation">Aktuelle Datenbank</string>
    <string name="Settings_DatabaseMove">Datenbank verschieben</string>
    <string name="Settings_DatabaseMove_ConfirmMessage">Die Datenbank \'%1$s\' befindet sich auf: %2$s.\n\nSoll diese nach: %3$s verschoben werden?</string>
    <string name="Settings_InternalStorage">Interner Speicher</string>
    <string name="Settings_SdCard">SD-Karte</string>
    <string name="Settings_CheckReport">Ergebnis der Prüfung:</string>
    <string name="Settings_DeleteBackupFileQuestion">Backup Datei löschen?\n\n{0}</string>
    <string name="Setting_StorageItems">Lagerverwaltung</string>
    <string name="Settings_DeleteStorageItems">Lagerbestand löschen…</string>
    <string name="Settings_DeleteStorageItemsSelection">Lager zum Läschen vom Bestand…</string>
    <string name="Settings_RenameStorageName">Lagername umbenennen</string>
    <string name="Settings_EnterNewStorageName">Neuen Namen eingeben:</string>
    <string name="Settings_DatabaseManagement">Datenbanken verwalten</string>
    <string name="Settings_DatabaseNew">Neue Datenbank anlegen…</string>
    <string name="Settings_SharedDirectory">Freigegebenes Verzeichnis</string>
    <string name="Settings_SelectSharedDirectory">Freigegebenes Verzeichnis auswählen…</string>
    <string name="Settings_SharedDirectoryLabel">Freigegebenes Verzeichnis:\n%s</string>
    <string name="Settings_ClearSharedDirectory">Freigabe des Verzeichnisses aufheben</string>
    <string name="Settings_DatabaseRename">Datenbank umbenennen…\n(außer der gerade geöffneten)</string>
    <string name="Settings_DatabaseRenameDialogTitle">Datenbank umbenennen</string>
    <string name="Settings_DatabaseRenameDialogMessage">\n\nNeuen Name eingeben:</string>
    <string name="Settings_DatabaseDelete">Datenbank löschen…\n(Auswahl folgt)</string>
    <string name="Settings_DatabaseRestore">Datenbank zurückspielen</string>
    <string name="Settings_DatabaseRestoreName">Welche Datenbank soll zurückgespiel werden?</string>
    <string name="Settings_DatabaseImport">Datenbank importieren</string>
    <string name="Settings_DatabaseImportName">Unter welchem Namen soll die Datenbank importiert werden?</string>
    <string name="Settings_DatabaseNewDialogTitle">Neue Datenbank erstellen</string>
    <string name="Settings_DatabaseNewDialogMessage">Name eingeben:</string>
    <string name="Settings_SelectStorageLocation">Speicherort auswählen:</string>
    <string name="Settings_EAN_Scann">EAN Scan</string>
    <string name="Settings_EAN_Scann_UseFrontcamera">Benutze Frontkamera</string>
    <string name="Settings_TestDatenbank">Zum Kennenlernen oder Testen neuer Funktionalität</string>
    <string name="Settings_TestDatenbankZuruecksetzen">Test Datenbank mit Beispielen erstellen</string>
    <string name="Settings_TestDatenbankLeeren">Leere Testdatenbank erstellen</string>
    <string name="Settings_CSV_Export">CSV Export</string>
    <string name="Settings_CSV_Export_Articles">Artikelstamm</string>
    <string name="Settings_CSV_Export_Inventory">Lagerbestand</string>
    <string name="Settings_CSVSeparator">Feldtrennzeichen</string>
    <string name="Settings_CSVSeparator_Comma_Text">Komma</string>
    <string name="Settings_CSVSeparator_Semicolon_Text">Semikolon</string>
    <string name="Settings_CSVSeparator_Tab_Text">Tabulator</string>
    <string name="Settings_AdditionalOptions">Weitere Optionen</string>
    <string name="Settings_ShowOFFCostMessage">Kostenhinweis bei OpenFoodFacts.org anzeigen</string>
    <string name="Settings_ErrorSavingAdditionalDatabasePath">Der eingegebene zusätzlicher Datenbankpfad \'{0}\' existiert nicht oder Sie haben kein Zugriff dadrauf.</string>
    <string name="Settings_ConvertDatabaseForPicture">Es müssen {0} Bilder übertragen werden.\n\nBeenden Sie die App anschließend ganz und starten Sie diese neu.</string>
    <string name="Settings_CompressPictures">Bilder komprimieren</string>
    <string name="ArticleDetails_Menu_DeleteArticle">Artikel löschen</string>
    <string name="ArticleDetails_Menu_CreatePicture">Bild erstellen</string>
    <string name="ArticleDetails_Menu_SelectPicture">Bild auswählen</string>
    <string name="ArticleDetails_Menu_ShowPicture">Bild bearbeiten</string>
    <string name="ArticleDetails_Menu_RemovePicture">Bild entfernen</string>
    <string name="ArticleDetails_Menu_EAN_Scannen">EAN Scannen</string>
    <string name="ArticleDetails_Menu_ToShoppingList">Auf Einkaufsliste</string>
    <string name="ArticleDetails_Menu_CurrentStock">Lagerbestand</string>
    <string name="ArticleDetails_Menu_SearchOpenFoodFacts">Suche auf OpenFoodFacts.org</string>
    <string name="InternetDatabaseSearch_Searching">Suche nach Artikeldaten auf:\n\n  https://world.openfoodfacts.org</string>
    <string name="InternetDatabaseSearch_Info">
        Die Produktdaten werden nach dem Wikipedia-Prinzip auf OpenFoodFacts.org
        von der Community gepflegt und sind noch lange nicht vollständig und/oder korrekt.
        \n\nBitte helfen Sie, die Produkte dort zu pflegen.
    </string>
    <string name="StorageItemList_Menu_Sort">Sortierung (Alphabetisch oder nach Ablaufdatum)</string>
    <string name="StorageItemList_Menu_Add">Artikel hinzufügen</string>
    <string name="StorageItemQuantity_Title">Artikelbestand</string>
    <string name="StorageItemQuantity_Menu_ToShoppingList">Auf Einkaufsliste</string>
    <string name="StorageItemQuantity_Menu_Artikelangaben">Artikelangaben</string>
    <string name="StorageItemQuantity_Menu_Edit">Positionen bearbeiten</string>
    <string name="StorageItemQuantity_Menu_EditPicture">Bild anzeigen</string>
    <string name="StorageItemQuantity_StorageForNewPosition">Lager für Neuanlagen:</string>
    <string name="StorageItemQuantity_Step">+/- Schritt</string>
    <string name="StorageItemQuantity_StepText">1x</string>
    <string name="StorageItemQuantity_AddPosition">Neue position anlegen</string>
    <string name="StorageItemQuantityList_Quantity">Anzahl:</string>
    <string name="StorageItemQuantityList_BestBefore">Ablaufdatum: %s</string>
    <string name="StorageItemQuantityList_StorageLabel">Lagerort: %s</string>
    <string name="StorageItemQuantityList_AddPosition">Neue Position</string>
    <string name="ShoppingList_Sparse">Kompakte Sicht</string>
    <string name="ShoppingList_Menu_Sort">Sortierung (Gekauft, Einkaufsmarkt, Hinzugefügt, Name)</string>
    <string name="ShoppingList_Menu_Add">Artikel in Liste aufnehmen</string>
    <string name="Picture">Bild</string>
    <string name="Increase">erhöhen</string>
    <string name="Decrease">verringern</string>
</resources>