<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/StorageItemQuantity_Menu_Edit"
        android:icon="@drawable/edit_24px"
        android:title="@string/StorageItemQuantity_Menu_Edit"
        app:iconTint="@color/Application_ActionBar_TextColor"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item android:id="@+id/StorageItemQuantity_Menu_ToShoppingList"
        android:icon="@drawable/shopping_cart_24px"
        android:title="@string/StorageItemQuantity_Menu_ToShoppingList"
        app:iconTint="@color/Application_ActionBar_TextColor"
        app:showAsAction="always" />

    <item android:id="@+id/StorageItemQuantity_Menu_EditPicture"
        android:icon="@drawable/photo_24px"
        android:title="@string/StorageItemQuantity_Menu_EditPicture"
        app:iconTint="?android:attr/textColorPrimary"
        app:showAsAction="never" />

    <item android:id="@+id/StorageItemQuantity_Menu_Cancel"
        android:icon="@drawable/close_24px"
        android:title="@string/App_Cancel"
        app:iconTint="@color/Application_ActionBar_TextColor"
        android:visible="false"
        app:showAsAction="always" />

    <item android:id="@+id/StorageItemQuantity_Menu_Save"
        android:icon="@drawable/check_24px"
        android:title="@string/App_Save"
        app:iconTint="@color/Application_ActionBar_TextColor"
        android:visible="false"
        app:showAsAction="always" />

    <item android:id="@+id/StorageItemQuantity_Menu_ArticleDetails"
        android:icon="@drawable/assignment_24px"
        android:title="@string/StorageItemQuantity_Menu_Artikelangaben"
        app:iconTint="?android:attr/textColorPrimary"
        app:showAsAction="never" />

</menu>