<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/ShoppingList_Search"
        android:icon="@drawable/search_24px"
        android:title="@string/App_Search"
        app:iconTint="@color/Application_ActionBar_TextColor"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        tools:ignore="AlwaysShowAction" />

    <item android:id="@+id/ShoppingList_Sort"
        android:icon="@drawable/sort_24px"
        android:title="@string/ShoppingList_Menu_Sort"
        app:iconTint="@color/Application_ActionBar_TextColor"
        app:showAsAction="always" />

    <item android:id="@+id/ShoppingList_Add"
        android:icon="@drawable/add_circle_24px"
        android:title="@string/ShoppingList_Menu_Add"
        app:iconTint="?android:attr/textColorPrimary"
        app:showAsAction="never" />

    <item android:id="@+id/ShoppingList_Share"
        android:icon="@drawable/share_24px"
        android:title="@string/App_Share"
        app:iconTint="?android:attr/textColorPrimary"
        app:showAsAction="never" />

    <item android:id="@+id/ShoppingList_Sparse"
        android:icon="@drawable/compress_24px"
        android:title="@string/ShoppingList_Sparse"
        app:iconTint="?android:attr/textColorPrimary"
        android:checkable="true"
        app:showAsAction="never" />
</menu>