<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/StorageItemQuantityListView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/StorageItemQuantityList_Add">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">
            <TextView
                android:text="@string/StorageItemQuantityList_Quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/StorageItemQuantityList_Quantity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
        <TextView
            android:id="@+id/StorageItemQuantityList_Date"
            android:tag="@string/StorageItemQuantityList_BestBefore"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/StorageItemQuantityList_Storage"
            android:tag="@string/StorageItemQuantityList_StorageLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:visibility="visible"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/StorageItemQuantityList_Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/StorageItemQuantityList_Remove"
        android:contentDescription="@string/Increase"
        android:visibility="visible"
        android:focusable="false"
        android:src="@drawable/add_circle_36px"
        android:background="?android:selectableItemBackground" />

    <ImageButton
        android:id="@+id/StorageItemQuantityList_Remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/Decrease"
        android:visibility="visible"
        android:focusable="false"
        android:src="@drawable/remove_circle_36px"
        android:layout_marginStart="8sp"
        android:background="?android:selectableItemBackground" />

    <TextView
        android:id="@+id/StorageItemQuantityList_Changed"
        android:textSize="25sp"
        android:visibility="invisible"
        android:paddingEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/StorageItemQuantityList_Remove"
        android:layout_alignParentEnd="true"
        tools:ignore="RtlSymmetry" />
</RelativeLayout>