<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id = "@+id/FragmentLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".EanCodeScan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/FragmentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textAlignment="center"
            android:text="@string/EanCodeScan_Title"/>

        <com.journeyapps.barcodescanner.DecoratedBarcodeView
            android:id="@+id/zxing_barcode_scanner"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_margin="5dp" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonZxingFlashOnOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#22AAAAAA"
                android:visibility="visible"
                android:drawableTop="@drawable/flashlight_on_40px"
                android:textColor="@color/Text_Color"
                android:text="@string/EanCodeScan_OnOff" />

            <Button
                android:id="@+id/buttonZxingCameraSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#22AAAAAA"
                android:drawableTop="@drawable/cameraswitch_40px"
                android:textColor="@color/Text_Color"
                android:text="@string/EanCodeScan_Change" />
            <Button
                android:id="@+id/buttonZxingTest"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#22AAAAAA"
                android:drawableTop="@drawable/barcode_40px"
                android:textColor="@color/Text_Color"
                android:text="@string/EanCodeScan_Test" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>