<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/InternetDatabaseResult"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/InternetDatabaseResult_AppBar"
        app:title="https://openfoodfacts.org"
        app:titleTextColor="@color/Application_ActionBar_TextColor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:background="@color/Application_ActionBar_Background"
        app:navigationIconTint="@color/Application_ActionBar_TextColor"
        app:navigationIcon="@drawable/arrow_back_24px"
        app:iconTint="@color/Application_ActionBar_TextColor" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <ProgressBar
        android:id="@+id/InternetDatabaseResult_Progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:indeterminate="true"
        android:scaleY="2"
        android:max="100"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/InternetDatabaseResult_ProgressText"
        android:text="@string/InternetDatabaseSearch_Searching"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/InternetDatabaseResult_EanCode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:autoLink="web"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/InternetDatabaseResult_Image"
        android:contentDescription="@string/Picture"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        android:scaleType="fitCenter"/>

        <TextView
            android:id="@+id/InternetDatabaseResult_Text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/InternetDatabaseResult_Description"
            android:text="@string/InternetDatabaseSearch_Info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

    </LinearLayout>
    </ScrollView>
</LinearLayout>